Fix jumping of labels and movement of widget size on selection.

--- a/assets/sass/widgets/_googlesitekit-widget-analyticsAllTraffic.scss
+++ b/assets/sass/widgets/_googlesitekit-widget-analyticsAllTraffic.scss
@@ -185,6 +185,11 @@
 		}
 	}
 
+	.googlesitekit-widget--analyticsAllTraffic__totals {
+		// HACK: Fixes jumping of widget when a dimension is selected.
+		height: 1px;
+	}
+
 	.googlesitekit-widget--analyticsAllTraffic__chart {
 		min-height: 368px;
 		position: relative;
